feat(community): social feed, messaging, events and notifications
- Add posts, comments, likes and blog articles
- Add real-time messaging and group chat
- Add events with RSVP system
- Add AI summary and translation services
- Add connection and report management
- Add notification center with push support
- Add dashboard stats service
- Add community FXML views (CommunityView, Dashboard, Notifications, Reports, Error)
- Add unit tests for community module